[gd_scene load_steps=5 format=3 uid="uid://b2hfkv452563h"]

[ext_resource type="Texture2D" uid="uid://dtko6lfn24q82" path="res://resource/textures/ui/portrait.png" id="1_02b1q"]
[ext_resource type="Script" uid="uid://xydjnb7wm37l" path="res://scenes/scenes/battle_scene/battle_scene_visuals/ui/turn_order_visualiser/turn_order_portrait/turn_order_portrait.gd" id="1_40boe"]
[ext_resource type="Texture2D" uid="uid://bhs3dty4eaj3y" path="res://resource/textures/demons/placeholder.png" id="2_40boe"]

[sub_resource type="LabelSettings" id="LabelSettings_02b1q"]
font_size = 14

[node name="TurnOrderPortrait" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_40boe")

[node name="BgRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_02b1q")

[node name="PortraitRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 12.0
offset_top = 27.0
offset_right = 52.0
offset_bottom = 67.0
texture = ExtResource("2_40boe")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 96.0
offset_right = 64.0
offset_bottom = 116.0
text = "NAME"
label_settings = SubResource("LabelSettings_02b1q")
horizontal_alignment = 1
